--- a/client/assets/css/app.less
+++ b/client/assets/css/app.less
@@ -34,6 +34,28 @@
   -webkit-transition: @property @duration ease-in-out; /* Saf3.2+, Chrome */
 }
 
+/** animations */
+.fade-hide, .fade-show {
+  -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+  -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+  -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+}
+
+.fade-hide {
+  opacity:1;
+}
+.fade-hide.fade-hide-active {
+  opacity:0;
+}
+
+.fade-show {
+  opacity:0;
+}
+.fade-show.fade-show-active {
+  opacity:1;
+}
+
 body {
   font-family: 'Ubuntu', sans-serif;
   background-color: lighten(@grey, 40%);
@@ -208,6 +230,8 @@ body {
 
   .content {
     position: absolute;
+    width: 100%;
+    background: white;
     top: @bar-height;
     .mixin-transition(top, 200ms);
     z-index: 8;
@@ -257,6 +281,7 @@ body {
 }
 
 .hero-unit {
+  background: none;
   h1, h2, h3, h4, h5 {
     font-weight: lighter;
     color: darken(@grey, 10%);
