--- a/client/assets/css/app.less
+++ b/client/assets/css/app.less
@@ -72,6 +72,13 @@ body {
   .brand {
     font-weight: lighter;
   }
+
+  .version{
+    font-size: 10px;
+    margin-top: 10px;
+    margin-left: -18px;
+    color: darken(@grey, 20%);
+  }
   .corespring-logo {
     width: 82px;
     height: 30px;
