Added create item session button + bugs url /bugs/:filename

--- a/client/assets/css/app.less
+++ b/client/assets/css/app.less
@@ -229,6 +229,16 @@ body {
       font-size: 12px;
       text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
     }
+    .create-session{
+      margin-left: 10px;
+      .icon-plus-sign{
+        color: white;
+        &:hover{
+          color: darken(white, 30%);
+        }
+      }
+
+    }
   }
 
   .options.show {
