--- a/server/views/layout.jade
+++ b/server/views/layout.jade
@@ -2,7 +2,7 @@ doctype 5
 html(xmlns="http://www.w3.org/1999/html")
   head
     title= title
-    link(rel="stylesheet", href="/components/bootstrap/css/bootstrap.css")
+    link(rel="stylesheet", href="/bootstrap/bootstrap.css")
     link(rel="stylesheet", href="/components/components-font-awesome/css/font-awesome.min.css")
     link(href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,700',
     rel='stylesheet',
