--- a/client/spec/runner/angular-runner.tmpl
+++ b/client/spec/runner/angular-runner.tmpl
@@ -15,6 +15,7 @@
     <% }) %>
     <script src="client/spec/runner/bower_components/angular/angular.js" type="text/javascript"></script>
     <script src="client/spec/runner/bower_components/angular-resource/angular-resource.js" type="text/javascript"></script>
+    <script src="client/spec/runner/bower_components/angular-route/angular-route.js" type="text/javascript"></script>
     <script src="client/spec/runner/bower_components/jquery/jquery.js" type="text/javascript"></script>
     <script src="client/spec/runner/bower_components/underscore/underscore.js" type="text/javascript"></script>
     <% with (scripts) { %>
